--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build && next export -o docs",
-    "start": "next start",
-    "test": "jest"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
